# mini_project_2025

./: .gitignore  .pre-commit-config.yaml  README.md  biome.json  docker-compose.yml
api/: Dockerfile  alembic.ini  config.py  dependencies.py  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 38362e248041_change_user_model.py  ead6e22fa456_create_user_table.py
api/db/: database.py  postgres.py
api/models/: user.py
api/routers/: users.py
api/schemas/: user.py
api/services/: users_service.py
api/tests/: test_users.py
nginx/: nginx.conf
web/: Dockerfile  env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.vue
web/src/components/: HelloWorld.vue  TheWelcome.vue
web/src/components/icons/: IconTooling.vue
web/src/views/: HomeView.vue
